Bug 541853 - Fix spacing for dropdown menu items

--- a/less/quicksilver/template.less
+++ b/less/quicksilver/template.less
@@ -74,19 +74,22 @@
       }
     }
     li > .dropdown-menu {
-      li.first {
+      >li.first {
         margin-top:20px;
       }
-      li.last {
+      >li.last {
         margin-bottom:20px;
       }
-      li {
+      >li {
         margin-right:30px;
         margin-left:30px;
       }
       a {
         margin:0;
       }
+      .yamm-content {
+        padding:20px 0;
+      } 
     }
     li.dropdown.eclipse-more {
       &.open {
